src/libui/libui.cr

module LibUI
  @[Link("#{__DIR__}/../../libui")]
  lib LibUI
    PI                    = 3.14159265358979323846264338327950288419716939937510582097494459
    DRAWDEFAULTMITERLIMIT =                                                             10.0

    struct InitOptions
      size : LibC::SizeT
    end

    fun init = uiInit(options : Pointer(Void)) : Pointer(LibC::Char)
    fun uninit = uiUninit
    fun free_init_error = uiFreeInitError(err : Pointer(LibC::Char))
    fun main = uiMain
    fun main_steps = uiMainSteps
    fun main_step = uiMainStep(wait : LibC::Int) : LibC::Int
    fun quit = uiQuit
    fun queue_main = uiQueueMain(f : (Pointer(Void) -> Void), data : Pointer(Void))
    fun timer = uiTimer(milliseconds : LibC::Int, f : (Pointer(Void) -> LibC::Int), data : Pointer(Void))
    fun on_should_quit = uiOnShouldQuit(f : (Pointer(Void) -> LibC::Int), data : Pointer(Void))
    fun free_text = uiFreeText(text : Pointer(LibC::Char))

    # struct Control
    #   signature : Void
    #   os_signature : Void
    #   type_signature : Void
    #   destroy : (Pointer(Void) -> Void)
    #   handle : (Pointer(Void) -> Void)
    #   parent : (Pointer(Void) -> Pointer(Void))
    #   set_parent : (Pointer(Void), Pointer(Void) -> Void)
    #   toplevel : (Pointer(Void) -> LibC::Int)
    #   visible : (Pointer(Void) -> LibC::Int)
    #   show : (Pointer(Void) -> Void)
    #   hide : (Pointer(Void) -> Void)
    #   enabled : (Pointer(Void) -> LibC::Int)
    #   enable : (Pointer(Void) -> Void)
    #   disable : (Pointer(Void) -> Void)
    # end
